--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@nestjs/common": "^4.5.9",
     "@nestjs/core": "^4.5.10",
     "@nestjs/microservices": "^4.5.8",
+    "@nestjs/mongoose": "^3.0.1",
     "@nestjs/testing": "^4.5.5",
     "@nestjs/websockets": "^4.5.8",
+    "mongoose": "^5.0.14",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "typescript": "^2.6.2"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
+    "@types/mongoose": "^5.0.9",
     "@types/node": "^9.3.0",
     "@types/supertest": "^2.0.4",
     "jest": "^21.2.1",
@@ -38,7 +41,11 @@
     "tslint": "5.3.2"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
