--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/swagger": "^1.2.2",
     "@nestjs/testing": "^4.5.5",
     "@nestjs/websockets": "^4.5.8",
+    "cors": "^2.8.4",
     "mongoose": "^5.0.14",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
